# ResExt

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  release.yml
resext/: Cargo.toml  README.md
resext-macro/: Cargo.toml  README.md
resext-macro/src/: lib.rs
resext-macro/tests/: test.rs
resext/src/: enum_macro.rs  lib.rs
resext/tests/: test.rs
src/: ctx.rs  enum_macro.rs  lib.rs  res_ext.rs  throw_err.rs
src/res_ext_methods/: better_expect.rs  context.rs  map_err_into.rs  mod.rs  or_default_context.rs  or_exit.rs  to_option_context.rs  with_context.rs
tests/: test.rs
