[package]
name = "resext"
version = "0.6.3"
edition = "2024"
authors = ["Taha Mahmoud <tahamahmoud7097@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "A simple, lightweight error handling crate for Rust with no-std support coming soon"
keywords = ["error", "error-handling", "result", "context"]
license = "MIT"
repository = "https://github.com/Tahaa-Dev/ResExt"
readme = "README.md"

[dependencies]
