[workspace]
members = ["resext", "resext-macro"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Taha Mahmoud <tahamahmoud7097@gmail.com"]
categories = ["rust-patterns", "no-std"]
description = "A simple, lightweight error handling crate for Rust"
keywords = ["error", "error-handling", "result", "context"]
license = "MIT"
repository = "https://github.com/Tahaa-Dev/ResExt"
