[package]
name = "resext-macro"
categories.workspace = true
description.workspace = true
keywords.workspace = true
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["parsing", "derive"] }
