[package]
name = "resext"
categories.workspace = true
description.workspace = true
keywords.workspace = true
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["proc-macro"]
proc-macro = ["resext-macro"]
declarative = []

[dependencies]
resext-macro = { version = "0.8.1", optional = true }
