[package]
name = "resext"
categories.workspace = true
description.workspace = true
keywords.workspace = true
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
std = ["resext-macro/std"]

[dependencies]
resext-macro = { path = "../resext-macro" }
